<resources>
    <string name="app_name">蓝莓</string>
    <string name="app_url"><a href="http://lanmeiquan.com">lanmeiquan.com</a></string>
    <string name="alp_lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="alp_lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="alp_lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="alp_lockscreen_access_pattern_start">Pattern started</string>
    <string name="phone_number">手机号码</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="okay">确定</string>
    <string name="quit">放弃</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="settings">设置</string>
    <string name="more">我的朋友圈</string>
    <string name="use_camera">使用相机</string>
    <string name="select_album">选择相册</string>
    <string name="feedback">意见反馈</string>
    <string name="create">创建</string>
    <string name="report">举报</string>
    <string name="like">点赞</string>
    <string name="unlike">取消赞</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="fixture">假数据</string>
    <string name="login">登录</string>
    <string name="logout">退出帐号</string>
    <string name="search">搜索</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="loading_more">正在加载更多</string>
    <string name="copy_to_clipborad">复制至剪贴板</string>
    <string name="server_error">服务器错误</string>
    <string name="server_object_error">服务器返回对象解析错误</string>
    <string name="server_connection_exception">无法访问服务器，请检查你的网络设置</string>
    <string name="server_500">服务器内部错误</string>
    <string name="not_found_circle">还没有跟你相关的朋友圈</string>
    <string name="not_found_circle_tip">你可以搜索或者创建一个</string>
    <string name="not_found_history">你还没有搜索历史</string>
    <string name="not_found_history_tip">搜索跟你相关的朋友圈吧</string>
    <string name="not_found_post">哎哟！这里空空如也</string>
    <string name="not_found_post_tip">去附近热门的圈子逛逛吧</string>
    <string name="not_found_comment">还没有人评论，抢个沙发吧</string>
    <string name="not_found_msg">还没有新消息哦</string>
    <string name="not_found_msg_tip">点赞、评论过的帖子有更新时，将收到消息提醒</string>
    <string name="not_found_praise">还没有收到赞哦</string>
    <string name="not_found_praise_tip">多多发帖、回帖，积累赞数吧</string>
    <string name="report_succeed">举报成功</string>
    <string name="report_type_1">色情暴力</string>
    <string name="report_type_2">违法违规</string>
    <string name="report_type_3">垃圾广告</string>
    <string name="report_type_4">人身攻击</string>
    <string name="report_type_5">虚假谣言</string>
    <string name="report_type_6">其他信息</string>
    <string name="share_succeed">分享成功</string>
    <string name="locating">定位中…</string>
    <string name="locating_failed">定位失败</string>
    <string name="new_version_to_upgrade">升级提醒</string>
    <string name="new_version">新版本: %s</string>
    <string name="download_upgrade">下载并升级</string>
    <string name="force_update_tip">你的客户端版本太旧，需要升级才能使用</string>
    <string name="action_settings">@string/settings</string>
    <string name="cd_action_overflow">action_overflow</string>
    <string name="cd_action_left">action_left</string>
    <string name="intro_1">打工之路有酸有甜</string>
    <string name="intro_2">介绍人发给你的手势密码</string>
    <string name="get_pattern">获取手势密码</string>
    <string name="other_login">其他帐号登录</string>
    <string name="wrong_pattern">解锁手势输入错误</string>
    <string name="register_phone_intro">手机号仅用来验证你的打工者身份\n并识别出你在蓝莓里认识的人</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="receiving_captcha">你的手机%s会收到一条6位数字的验证码的短信</string>
    <string name="get_captcha">获取验证码</string>
    <string name="reget_captcha">重新发送(%s)</string>
    <string name="find_password">找回密码</string>
    <string name="captcha">验证码</string>
    <string name="set_new_pwd">设置新密码</string>
    <string name="request_success">请求成功，你将收到验证码短信</string>
    <string name="new_pwd_set">成功修改密码</string>
    <string name="wrong_password">密码错误</string>
    <string name="wrong_phone_number">手机号没有注册</string>
    <string name="login_failed">登录失败</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login_success">登录成功</string>
    <string name="find_friend">寻找朋友</string>
    <string name="import_contact_1">通讯录里的朋友，现在都在哪个厂上班？他们正在这些厂里匿名说什么？</string>
    <string name="import_contact_2">通过手机通讯录，找出和你一个厂的朋友</string>
    <string name="sync_contact_failed">同步通讯录失败，请尝试重新同步</string>
    <string name="get_lock_pattern">获取手势密码</string>
    <string name="get_lockpattern_1">1886是一个私密的，需要邀请的劳动者匿名社区。如果你没有朋友的介绍，是不能进入的！</string>
    <string name="get_lockpattern_2">向1886里的熟人索取手势密码</string>
    <string name="start_find">邀请通讯录好友加入</string>
    <string name="invite_people_to_unlock">邀请好友，即可解锁</string>
    <string name="publish_content">发表内容</string>
    <string name="publish_post">发表</string>
    <string name="publish_submit">提交</string>
    <string name="publish">发表</string>
    <string name="who_will_see_this_secret">谁会看到这条秘密</string>
    <string name="add_photo">添加照片</string>
    <string name="post_description">你在厂里的朋友会看到这条秘密，并知道是厂里面认识的人发的，但是无法猜到谁是作者。\n\n如果秘密被赞的数量较多，将自动转发到其他朋友圈，让更多的人看到！</string>
    <string name="got_it">知道啦</string>
    <string name="post_anonymously">匿名发表秘密或小心情</string>
    <string name="shuffle_bg_color">随机切换一种色彩</string>
    <string name="post_over_length">内容不能超过%1$d个字</string>
    <string name="quit_confirm">有内容未发布，确认放弃？</string>
    <string name="resume_editing">继续编辑</string>
    <string name="error_start_camera">启动相机应用错误</string>
    <string name="error_start_album">无法选择相册图片</string>
    <string name="send_succeed">发送成功</string>
    <string name="cannot_post_empty_content">不能发表空内容。</string>
    <string name="post_not_found">没有找到帖子</string>
    <string name="comment_load_failed">加载失败，请点击重试</string>
    <string name="select_circle">你在哪里工作？</string>
    <string name="search_circles">请输入你的企业名称查找</string>
    <string name="my_circles">我的朋友圈</string>
    <string name="no_circles">没有找到朋友圈</string>
    <string name="factory">工</string>
    <string name="business">商</string>
    <string name="most_friends">朋友最多</string>
    <string name="nearest">距离最近</string>
    <string name="last_visited">最后访问</string>
    <string name="enter_search_keyword">请输入搜索内容</string>
    <string name="clear_search_history">清除搜索记录</string>
    <string name="no_search_result">没有找到 “%1$s” 相关的朋友圈</string>
    <string name="try_other_search_keyword">你可以尝试更改搜索关键词，或申请创建朋友圈</string>
    <string name="create_circle">创建朋友圈</string>
    <string name="circle_full_name">朋友圈全称</string>
    <string name="circle_abbreviation">朋友圈短名称</string>
    <string name="current_location">当前位置</string>
    <string name="enter_captcha">输入验证码</string>
    <string name="change_captcha">换一张</string>
    <string name="invite_people">去邀请朋友</string>
    <string name="invite_people_info">邀请好友进入（需要3个朋友加入，才可以开通）</string>
    <string name="circle_name_length_long">朋友圈名字太长</string>
    <string name="circle_short_name_length_long">朋友圈短名称太长</string>
    <string name="success_created">提交成功，若审核通过，我们会及时通知，请耐心等候</string>
    <string name="not_select_circle">不设置在哪里上班，没法玩啊</string>
    <string name="friends_info">朋友(%1$d) | 工友(%2$d)</string>
    <string name="hidden_friends_feed">你朋友发了%1$d条秘密，但是被隐藏了</string>
    <string name="unlock_to_view">解锁查看</string>
    <string name="introduce_to_friends">介绍给朋友</string>
    <string name="about">蓝莓的故事</string>
    <string name="no_publish_perm_tip">如果这里有%1$d个朋友在职，就能证明你也在这里工作过，就可以发帖啦。</string>
    <string name="no_perm_tip">为杜绝捣乱，只有证明你曾经在这里工作过，才可以发帖！\n\n解锁条件：当你有三个朋友把这里设为在职时，就能解锁发帖啦！</string>
    <string name="unlock_tip">当在厂里的朋友数量小于%1$d时，就太容易被你猜出作者是谁啦！为了保护作者，系统将隐藏他们发的秘密。\n\n解锁条件：厂里有%2$d个熟人在玩时，将立刻解锁朋友的秘密。</string>
    <string name="comment">评论</string>
    <string name="anonymously_comment">匿名发表评论</string>
    <string name="comment_action">评论操作</string>
    <string name="post_action">帖子操作</string>
    <string name="give_us_feedback">向我们提出建议</string>
    <string name="praise_count">我收到的赞</string>
    <string name="praise_count_obtained">我收到的赞</string>
    <string name="praise_status">帖子获%1$d赞，评论获%2$d赞，超过全国%3$s的朋友</string>
    <string name="no_new_praise">没有新赞</string>
    <string name="praise_no_praise">你还没有收到赞</string>
    <string name="messages">消息</string>
    <string name="no_new_msg">没有新消息</string>
    <string name="no_msg">没有消息</string>
    <string name="invite_info">为了保护发帖人的隐私安全（不让你猜出是谁发的），当你有三个朋友在“%s”打工圈时，才可以查看。</string>
    <string name="current_friend_count">此圈内的通讯录朋友：%1$d</string>
    <string name="invite_contact_friends">邀请通讯录朋友加入</string>
    <string name="who_to_invite">想邀请谁？</string>
    <string name="no_permission_to_read_contacts">没有读取通讯录的权限</string>
    <string name="contacts_empty">通讯录为空</string>
    <string name="search_contact">搜人名</string>
    <string name="check_update">检查更新</string>
    <string name="help">使用帮助</string>
    <string name="no_perm_to_publish">你没有发帖的权限</string>
    <string name="find_friends">找出圈子里的朋友，看他们都在说什么？</string>
    <string name="circle_unlocked_tip">你还没有解锁这个圈子</string>
    <string name="unlock">解锁</string>
    <string name="crop_image">裁剪图片</string>
    <string name="notification_friend_new_post">你的朋友发了一条新帖子</string>
    <string name="notification_circle_unlocked">新的朋友圈解锁了！</string>
    <string name="notification_circle_unlocked_tip">看看［%1$s］里的朋友发的秘密吧</string>
    <string name="notification_new">新提醒</string>
    <string name="notification_new_follow_comment">你关注的秘密有了新的评论</string>
    <string name="notification_new_own_comment">你发布的秘密有了新的评论</string>
    <string name="notification_new_follow_comments">你关注的%d条秘密有了新的评论</string>
    <string name="notification_new_own_comments">你发布的%d条秘密有了新的评论</string>
    <string name="notification_new_friend">新朋友加入</string>
    <string name="notification_new_friend_tip">［%s］的朋友数＋1，能猜到他是谁吗</string>
    <string name="notification_new_friend_tip_plural">［%1$s］的朋友数＋%2$d，能猜到他们是谁吗</string>
    <string name="notification_circle_create_approve">圈子审核通过</string>
    <string name="notification_circle_create_approve_tip">你申请创建的圈子［%1$s］已经解锁了</string>
    <string name="overlay_tip_source">发这条秘密的人，你肯定认识。为了保护作者，系统将把你的朋友和他们在这个厂的朋友都显示为认识的人。</string>
    <string name="overlay_tip_repost">你会看到是因为这条秘密在这个厂很火！而且你的朋友正在关注。</string>
    <string name="overlay_tip_praise">赞，可以鼓励作者，并且当该秘密有更新时，你将收到提醒</string>
    <string name="overlay_tip_portrait">每次评论新的秘密，你的头像都会不同。</string>
    <string name="overlay_tip_share">遇到屌炸天的秘密时，记得分享给朋友哦！</string>
    <string name="ask_question">我要提问</string>
    <string name="web_load_failed">页面加载失败</string>
    <string name="exit">退出</string>
    <string name="exit_app">关闭应用</string>
    <string name="later">稍后再说</string>
    <string name="guide">欢迎页</string>
    <string name="server_unknown_host">无法解析域名，请检查你的网络设置</string>
    <string name="newest_version">已经是最新版本</string>
    <string name="silent_mode">静音模式</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="my_friends">我的朋友</string>
    <string name="add_new_friend">添加新朋友</string>
    <string name="my_id">我的蓝莓ID：%1$s</string>
    <string name="scan_to_be_friend">让小伙伴扫一扫，即可加为蓝莓朋友</string>
    <string name="people_know_you_count">* %1$d个认识你的人会收到你发的秘密</string>
    <string name="friends_in_contact">通讯录联系人 (%1$d)</string>
    <string name="friends_from_scan">来自扫一扫添加 (%1$d)</string>
    <string name="known_people">我认识的人</string>
    <string name="send">发送</string>
    <string name="rotate">旋转</string>
</resources>