<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res/com.utree.eightysix"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="39dp">

    <include layout="@layout/widget_phone_number"/>

    <include layout="@layout/widget_pwd"/>

    <com.utree.eightysix.widget.RoundedButton
            app:radius="2dp"
            app:background="@color/apptheme_primary_btn_light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/btn_register"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:enabled="false"/>

    <com.utree.eightysix.widget.RoundedButton
            app:radius="2dp"
            app:background="@color/apptheme_primary_btn_light"
            android:id="@+id/btn_import_contact"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_friend"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_phone_intro"
            android:textColor="@color/apptheme_primary_dark_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

</LinearLayout>