<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res/com.utree.eightysix"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
            android:id="@+id/tv_invite_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_info"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:background="@color/apptheme_secondary_light_color"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="35dp"
            android:paddingBottom="60dp"/>

    <TextView
            android:id="@+id/tv_friend_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_friend_count"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"/>

    <com.utree.eightysix.widget.RoundedButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invite_contact_friends"
            android:id="@+id/rb_invite"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="15dp"/>
</LinearLayout>
