<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        xmlns:app="http://schemas.android.com/apk/res/com.utree.eightysix"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_contact_1"
                android:textSize="22sp"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:background="@color/apptheme_secondary_light_color"
                android:paddingLeft="30dp"
                android:paddingTop="35dp"
                android:paddingRight="30dp"
                android:paddingBottom="60dp"
                android:textColor="@android:color/white"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/import_contact_2"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:textSize="13sp"/>

        <com.utree.eightysix.widget.RoundedButton
                app:radius="2dp"
                app:background="@color/apptheme_primary_btn_light"
                android:id="@+id/rb_import"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_friend"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>

    </LinearLayout>

    <View
            android:id="@+id/v_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#88000000"
            android:visibility="invisible"/>

    <FrameLayout
            android:id="@+id/fl_import"
            android:layout_width="250dp"
            android:layout_height="270dp"
            android:layout_gravity="center"
            android:visibility="invisible">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp">

            <LinearLayout
                    android:id="@+id/ll_scroll"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:background="@android:color/white">

                <TextView
                        android:id="@+id/tv_loading"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:textColor="@android:color/white"
                        android:background="@color/apptheme_primary_light_color"/>

                <TextView
                        android:id="@+id/tv_result"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:gravity="center"
                        android:text="通讯录查找中..."
                        android:textSize="18sp"
                        android:textColor="@android:color/white"
                        android:background="@color/apptheme_primary_light_color"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:text="设置你上班的地方，就能看到厂里的朋友匿名在说什么啦"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:padding="15dp"/>

                <com.utree.eightysix.widget.RoundedButton
                        android:id="@+id/rb_done"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:text="设置在职企业"/>
            </LinearLayout>


        </FrameLayout>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_app_icon"/>
    </FrameLayout>
</FrameLayout>